Added Manual capture options
Auto white balance lock, white balance mode, auto exposure lock, iso
mode, focus mode, stbilization. May add more if necessayry, but should
be enough.
Removed old files. Moved some settings to image specific settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.bwarg.slave.SlaveSettingsActivity" />
+        <activity android:name="com.bwarg.slave.ImageSettingsActivity" />
     </application>
 </manifest>
 
